--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
     "multer": "^1.4.2",
-    "env-cmd": "^10.1.0",
+    "socket.io": "^2.3.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {},
